[package]
name = "configuru"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Library for configuration management in Rust apps."
homepage = "https://www.ackee.agency"
documentation = "https://github.com/hofp37/configuru"
repository = "https://github.com/hofp37/configuru"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2.4"
regex = "1.8.4"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
